tests/fixtures/invalid/var_empty_key.wks
# Test empty variable key error
:var "" "value"
a "Test" +write %{{echo test}}
